--- a/MyLibraryRazor/MyLibraryRazor/Pages/Index.cshtml
+++ b/MyLibraryRazor/MyLibraryRazor/Pages/Index.cshtml
@@ -20,7 +20,7 @@
                 @Html.DisplayNameFor(model => model.Book[0].Subtitle)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Book[0].BookAuthors)
+                @Html.DisplayNameFor(model => model.Book[0].Author)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Book[0].Publisher)
@@ -47,7 +47,7 @@
                 @Html.DisplayFor(modelItem => item.Subtitle)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.BookAuthors)
+                @Html.DisplayFor(modelItem => item.Author)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Publisher.Label)
