--- a/MyLibraryRazor/MyLibraryRazor/Pages/Create.cshtml
+++ b/MyLibraryRazor/MyLibraryRazor/Pages/Create.cshtml
@@ -8,34 +8,6 @@
 <h1>Create</h1>
 
 <h4>Book</h4>
-<div class="modal fade" id="basicExampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-     aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">著者</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                著者を選択または新規登録<br />
-                <label asp-for="@Model.CurrentBookAuthor.Author.Name" class="sontrol-label"></label>
-                <input asp-for="@Model.CurrentBookAuthor.Author.Name" list="authorlist" class="form-control" />
-                <datalist id="authorlist">
-                    <select asp-for="@Model.CurrentBookAuthor.Author.Name" class="form-control" asp-items="ViewBag.AuthorList">
-                    </select>
-                </datalist>
-                <label asp-for="@Model.CurrentBookAuthor.Author.SortName" class="sontrol-label"></label>
-                <input asp-for="@Model.CurrentBookAuthor.Author.SortName" class="form-control" />
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">キャンセル</button>
-                <button type="button" class="btn btn-primary">OK</button>
-            </div>
-        </div>
-    </div>
-</div>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -52,11 +24,11 @@
                 <span asp-validation-for="Book.Subtitle" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Book.BookAuthors" class="control-label"></label>
+                <label asp-for="Book.Author" class="control-label"></label>
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#basicExampleModal">著者を設定</button>
-                <input asp-for="Book.BookAuthors" list="authorlist" class="form-control" />
+                <input asp-for="Book.Author" list="authorlist" class="form-control" />
                 <datalist id="authorlist">
-                    <select asp-for="Book.BookAuthors" class="form-control" asp-items="ViewBag.AuthorList">
+                    <select asp-for="Book.Author" class="form-control" asp-items="ViewBag.AuthorList">
                     </select>
                 </datalist>
             </div>
@@ -74,7 +46,7 @@
                 <span asp-validation-for="Book.Publisher" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Book.PublisherId" class="control-label"></label>
+                <label asp-for="Book.LeadSentence" class="control-label"></label>
                 <input asp-for="Book.LeadSentence" class="form-control" />
                 <span asp-validation-for="Book.LeadSentence" class="text-danger"></span>
             </div>
