--- a/MyLibraryRazor/MyLibraryRazor/Pages/Details.cshtml
+++ b/MyLibraryRazor/MyLibraryRazor/Pages/Details.cshtml
@@ -24,10 +24,10 @@
             @Html.DisplayFor(model => model.Book.Subtitle)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Book.BookAuthors)
+            @Html.DisplayNameFor(model => model.Book.Author)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Book.BookAuthors)
+            @Html.DisplayFor(model => model.Book.Author)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Book.Publisher)
