--- a/MyLibraryRazor/MyLibraryRazor/Pages/Index.cshtml
+++ b/MyLibraryRazor/MyLibraryRazor/Pages/Index.cshtml
@@ -47,7 +47,7 @@
                 @Html.DisplayFor(modelItem => item.Subtitle)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Author)
+                @Html.DisplayFor(modelItem => item.Author.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Publisher.Label)
